adding user entiti and container
