# src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router } from "express";
 
 import { categoriesRoutes } from "./categories.routes";
 import { specificationsRoutes } from "./specifications.routes";
+import { userRoutes } from "./users.routes";
 
 const router = Router();
 
 
-router.use(categoriesRoutes)
-router.use(specificationsRoutes)
+router.use("/categories", categoriesRoutes)
+router.use("/specifications", specificationsRoutes)
+router.use("/users", userRoutes)
 
 export { router }
